tasks management page, tasks leasing
